--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -40,7 +40,7 @@ bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="JumpAction",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="JumpAction",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="StanceAction",Key=LeftAlt,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="StanceAction",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SprintAction",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="StanceAction",Key=Gamepad_FaceButton_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SprintAction",Key=Gamepad_LeftThumbstick,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -48,14 +48,6 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="WalkAction",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="AimAction",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="AimAction",Key=Gamepad_LeftTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="SelectRotationMode_1",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="SelectRotationMode_2",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="SelectRotationMode_1",Key=Gamepad_DPad_Up,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="SelectRotationMode_2",Key=Gamepad_DPad_Right,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="CameraAction",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="CameraAction",Key=Gamepad_RightThumbstick,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="RagdollAction",Key=X,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="RagdollAction",Key=Gamepad_FaceButton_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward/Backwards",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight/Left",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="LookUp/Down",Key=MouseY,Scale=-1.000000)
