--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,3 @@
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/AdvancedLocomotionV3/Maps/ALSV3_DemoLevel_SP.ALSV3_DemoLevel_SP
-GameDefaultMap=/Game/AdvancedLocomotionV3/Maps/ALSV3_DemoLevel_SP.ALSV3_DemoLevel_SP
-TwoPlayerSplitscreenLayout=Vertical
-bOffsetPlayerGamepadIds=True
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
@@ -73,6 +67,23 @@ r.DefaultFeature.AntiAliasing=1
 [/Script/Engine.RecastNavMesh]
 RuntimeGeneration=Static
 
+[URL]
+GameName=SpoopHunters
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/AdvancedLocomotionV3/Maps/ALSV3_DemoLevel_SP.ALSV3_DemoLevel_SP
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Vertical
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=True
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/AdvancedLocomotionV3/Maps/ALSV3_DemoLevel_SP.ALSV3_DemoLevel_SP
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/AdvancedLocomotionV3/Maps/ALS_GameMode_SP.ALS_GameMode_SP_C
+GlobalDefaultServerGameMode=None
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -113,8 +124,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-[URL]
-GameName=SpoopHunters
 
 
