--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,7 +71,7 @@ RuntimeGeneration=Static
 GameName=SpoopHunters
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/AdvancedLocomotionV3/Maps/ALSV3_DemoLevel_SP.ALSV3_DemoLevel_SP
+EditorStartupMap=/Game/AdvancedLocomotionV3/Maps/ALSV3_EmptyLevel.ALSV3_EmptyLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -79,7 +79,7 @@ TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=True
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/AdvancedLocomotionV3/Maps/ALSV3_DemoLevel_SP.ALSV3_DemoLevel_SP
+GameDefaultMap=/Game/AdvancedLocomotionV3/Maps/ALSV3_EmptyLevel.ALSV3_EmptyLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/AdvancedLocomotionV3/Maps/ALS_GameMode_SP.ALS_GameMode_SP_C
 GlobalDefaultServerGameMode=None
@@ -124,5 +124,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
